--- a/src/app/Components/track-order/track-order.component.html
+++ b/src/app/Components/track-order/track-order.component.html
@@ -6,6 +6,7 @@
       total Prices:
       <div *ngFor="let item of ordersList">
         {{item.totalPrice}}
+        {{item.restaurantImage}}
       </div>
     </div>
   </div>
