--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,15 @@
 <!-- <router-outlet></router-outlet> -->
-<app-header></app-header>
-<app-gift-meals></app-gift-meals>
-<!-- <app-track-order></app-track-order> -->
+<!--<app-header></app-header>
+<div>
+    <router-outlet></router-outlet>
+</div>-->
+<!--<app-delivery></app-delivery>-->
+<app-dashboard></app-dashboard>
+<!--<app-change-email></app-change-email>-->
+<!--<app-change-password></app-change-password>-->
+<!--<app-address-book></app-address-book>-->
+<!--<app-settings></app-settings>-->
+<!--<app-gift-meals></app-gift-meals>-->
+ <!--<app-track-order></app-track-order> -->
 
 <!-- <app-dine-out></app-dine-out> -->
