--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -1,61 +1,129 @@
 <!----------------1st nav------------------------------------>
-<div class="container-fluid">
+<!--<div class="container-fluid">
   <div class="topnav" id="myTopnav" style="display: none;">
     <ul>
-      <li><img src="images/app icon.jpg" style="float: left;"><a href="#home" class="active" style="font-size: 34px;padding:0;padding-top: 10px;border-right: 1px solid gray;padding-right: 8px;"> elmenus </a></li>
-    </ul>
-    <a href="Delivery-Page.html">Delivery</a>
-    <a href="DineOut-page.html">Dine Out</a>
-    <a href="giftmeals.html" class="gift"><i class="fas fa-gift"></i>Gift Meals</a>
-    <a href="#"><i class="fas fa-bell"></i>Notification</a>
-    <a href="myorderspast.html">My Orders</a>
-    <div class="dropdown2">
-      <button class="dropbtn" id="name_navbar"><i class="fas fa-user-friends"></i>
-        <!--<i class="fa fa-caret-down"></i>-->
-      </button>
-      <div class="dropdown-content2">
-        <a href="settings-Page.html">Account Settings</a>
-        <a href="#">Log Out</a>
-      </div>
+  <li><img src="../../../assets/app icon.jpg" style="float: left;"><a href="#home" class="active" style="font-size: 34px;padding:0;padding-top: 10px;border-right: 1px solid gray;padding-right: 8px;"> elmenus  </a></li>
+</ul>
+  <a href="#">Delivery</a>
+  <a href="#">Dine Out</a>
+  <a href="#" class="gift" ><i class="fas fa-gift"></i>Gift Meals</a>
+  <a href="#"><i class="fas fa-bell"></i>Notification</a>
+  <a href="#">My Orders</a>
+  <div class="dropdown2" >
+    <button class="dropbtn" id="name_navbar"><i class="fas fa-user-friends"></i> 
+        //  <i class="fa fa-caret-down"></i>//
+
+    </button>
+    <div class="dropdown-content2">
+      <a href="settings-Page.html">Account Settings</a>
+      <a href="#">Log Out</a>
     </div>
-    <a href="#" class="cart"><i class="fas fa-shopping-cart"></i></a>
-    <a href="javascript:void(0);" style="font-size:25px;" class="icon" onclick="myFunction()">&#9776;</a>
+  </div> 
+  <a href="#" class="cart"><i class="fas fa-shopping-cart"></i></a>
+  <a href="javascript:void(0);" style="font-size:25px;" class="icon" onclick="myFunction()">&#9776;</a>
 
-  </div>
-  <!--------------------------------------------------->
-  <div class="topnav" id="myTopnav2">
-    <ul>
-      <li><img src="images/app icon.jpg" style="float: left;"><a href="#" class="active" style="font-size: 34px;padding:0;padding-top: 10px;border-right: 1px solid gray;padding-right: 8px;"> elmenus </a></li>
-    </ul>
-    <a href="Delivery-Page.html">Delivery</a>
-    <a href="DineOut-page.html">Dine Out</a>
-    <a href="giftmeals.html" class="gift2"><i class="fas fa-gift"></i>Gift Meals</a>
-    <a href="#" data-toggle="modal" data-target="#exampleModalCenter" class="login-nav">Login</a>
-    <a href="#" data-toggle="modal" data-target="#exampleModalCenter" class="signup-nav">Sign Up</a>
-    <a href="myorderspast.html" class="cart"><i style="font-size: 24px; " class="fas fa-shopping-cart"></i></a>
-    <a href="javascript:void(1);" style="font-size:25px;" class="icon" onclick="myFunction2()">&#9776;</a>
-
-  </div>
 </div>
+</div>-->
 
-<!--------------- 2nd nav ---------------------->
-  <nav class=" navbar navbar-light bg-light">
-    <div class="input-container">
-      <input class="input-field" type="text" placeholder="Find a Restaurant">
-      <i class="fas fa-search"></i>
-    </div>
-    <span style="font-size: 24px;"><i class="fa fa-biking" style="color: #E5533A;"></i>Deliver</span>
-    <span style="margin-right: 100px;color: #E5533A; font-size: 26px;"><strong> St.Mohamed Tawfik</strong></span>
-    <button style="width: 100px; height: 35px; font-size: 20px;border:1px solid #E5533A;background-color: none;color: #E5533A; border-radius: 8px;">Change</button>
-  </nav>
+<!--------------------------------------------------->
+<!-- Image and text -->
+
+<!-------------- nav before login ------------------------>
+<div *ngIf="nav_before_login">
+<nav class="navbar navbar-expand-lg navbar-light bg-light custom" style="padding: 0;" >
+  <a class="navbar-brand" href="#">
+    <img src="assets/app icon.jpg" style="width: 40px; height: 40px;" class="d-inline-block align-top" alt="">
+    elmenus
+  </a>  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02" style="height: 50px;">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" [routerLink]="['/delivery']" routerLinkActive="active" href="#">Delivery</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" [routerLink]="['/dineout']" routerLinkActive="active" >Dine Out</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" [routerLink]="['/setting']" routerLinkActive="active"><i class="fas fa-gift" ></i>Gift Meals</a>
+      </li>
+    </ul>
+    <!--<form class="form-inline my-2 my-lg-0">-->
+      <button class="btn login my-2 my-sm-0" data-toggle="modal" data-target="#exampleModalCenter" >Login</button>
+      <button class="btn sign my-2 my-sm-0" data-toggle="modal" data-target="#exampleModalCenter" >Sign Up</button>
+      <a href="#" class="cart"><i style="font-size: 24px; " class="fas fa-shopping-cart"></i></a>
+
+    <!--</form>-->
+  </div>
+</nav>      
+</div>
+<!-------------- nav after login ----------------------------->
+<div *ngIf="nav_after_login">
+<nav class="navbar navbar-expand-lg navbar-light bg-light custom" style="padding: 0;" >
+  <a class="navbar-brand" href="#">
+    <img src="assets/app icon.jpg" style="width: 40px; height: 40px;" class="d-inline-block align-top" alt="">
+    elmenus
+  </a>  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02" style="height: 50px;">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Delivery</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Dine Out</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"><i class="fas fa-gift"></i>Gift Meals</a>
+      </li>
+    </ul>
+    <!-----right Side -->
+    <ul class="navbar-nav navbar-after mr-auto mt-2 mt-lg-0">
+      <li class="nav-item">
+        <a class="nav-link" href="#"><i class="fas fa-bell"></i>Notification</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">My Orders</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-user-friends"></i>  Dropdown link
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item"  href="#">Account Settings</a>
+          <a class="dropdown-item" href="#">Logout</a>
+        </div>
+      </li>
+      </ul>
+      <a href="#" class="cart"><i style="font-size: 24px; " class="fas fa-shopping-cart"></i></a>
+  </div>
+</nav> 
+</div>
+<!------------------- 2nd nav --------------------------------->
+    <nav class=" navbar navbar-light bg-light">
+      <div class="input-container">
+        <input class="input-field" type="text" placeholder="Find a Restaurant">
+        <i class="fas fa-search"></i>
+      </div>
+      <span style="font-size: 20px;"><i class="fas fa-biking" style="color: #E5533A;"></i>Deliver</span>
+      <span style="margin-right: 100px;color: #E5533A; font-size: 22px;"><strong> St.Mohamed Tawfik</strong></span>
+      <button style="width: 100px; height: 30px; font-size: 17px;border:1px solid #E5533A;background-color: none;color: #E5533A; border-radius: 8px;">Change</button>
+    </nav>
+
+<!-------- Routing -------------------------------------------->
+
 <!----------------------- Start Modal----------------------------->
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 <div class="modal-dialog modal-dialog-centered" role="document">
   <div class="modal-content">
     <div class="modal-header">
-      <h2  class="modal-title"><img class="img-fluid rounded-circle mx-auto d-block" style="width: 19%;float: left;" src="images/app icon.jpg" alt="app icon">elmenus
+      <h2  class="modal-title"><img class="img-fluid rounded-circle mx-auto d-block" style="width: 19%;float: left;" src="/assets/app icon.jpg" alt="app icon">elmenus
       </h2>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" #close class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
@@ -80,8 +148,8 @@
                   <div class="form-group">
                     <input type="password" class="form-control" id="pwd" style="font-size: 15px; height: 40px !important;" placeholder="password" name="pswd">
                   </div>
-                  <button type="button" id="modal_login" class="btn btn-block" style="background-color: #E5533A; color: white; font-size: 23px;">Login</button>
-                  <button type="button" class="btn btn-block" style="background-color: #4267B2; color: white; font-size: 22px;">Continue With FaceBook</button>
+                  <button (click)="login()" type="button" id="modal_login" class="btn btn-block" style="background-color: #E5533A; color: white; font-size: 18px;">Login</button>
+                  <button (click)="login()" type="button" class="btn btn-block" style="background-color: #4267B2; color: white; font-size: 15px;">Continue With FaceBook</button>
                   <span style="font-size: 15px; margin-top: 10%; margin-left: 30%; color: #E5533A;">forget password?</span>
                 </div>
             <!--------------------------------------------->
@@ -95,7 +163,7 @@
                   <div class="form-group">
                     <input type="password" class="form-control" id="pwd2" style="font-size: 15px; height: 40px !important;" placeholder="password" name="pswd">
                   </div>
-                  <button type="button" class="btn btn-block" style="background-color: #E5533A; color: white; font-size: 22px;">Create Account</button>
+                  <button (click)="login()" type="button" class="btn btn-block" style="background-color: #E5533A; color: white; font-size: 18px;">Create Account</button>
                   <span style="font-size: 13px;text-align: center;color: rgb(207, 188, 188); ">By creating an account, you agree to our Terms</span>
                 </div>
         </div>
