--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 <!--<app-change-password></app-change-password>-->
 <!--<app-address-book></app-address-book>-->
 <!--<app-settings></app-settings>-->
-<!-- <app-gift-meals></app-gift-meals> -->
- <app-track-order></app-track-order>
+<app-gift-meals></app-gift-meals>
+ <!-- <app-track-order></app-track-order> -->
 
 <!-- <app-dine-out></app-dine-out> -->
