--- a/src/app/Components/delivery/delivery.component.html
+++ b/src/app/Components/delivery/delivery.component.html
@@ -40,8 +40,7 @@
           <img [src]="item.restaurantFeaturedPhotos" width="40px" height="40px" style="float: left;margin-right: 6px;margin-top: 12px;">
           <p class="paragraph">{{item.restaurantName}}</p> 
           <p class="aria_parag">{{item.restaurantType}}</p>
-          <ngb-rating [max]="5" rate={{item.reviews}} [readonly]="true"></ngb-rating>
-
+          <ngb-rating [max]="5" [(rate)]="item.reviews"  [readonly]="true"></ngb-rating>
         </div>
         
     </div>
