--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!-- <router-outlet></router-outlet> -->
 <app-header></app-header>
-<div>
+<!-- <div>
     <router-outlet></router-outlet>
-</div>
+</div> -->
 <!-- <app-delivery></app-delivery> -->
 
 <!--<app-dashboard></app-dashboard>-->
@@ -11,6 +11,6 @@
 <!--<app-address-book></app-address-book>-->
 <!--<app-settings></app-settings>-->
 <!-- <app-gift-meals></app-gift-meals> -->
- <!--<app-track-order></app-track-order> -->
+ <app-track-order></app-track-order>
 
 <!-- <app-dine-out></app-dine-out> -->
