--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,1 +1,391 @@
-<p>footer works!</p>
+<footer class="footer-main">
+    <!-- container footer div -->
+    <div class="container">
+
+        <!-- first footer row -->
+        <div class="row">
+
+            <!-- Images col -->
+            <div class="images-col col-sm-12 col-md-2 col-lg-2 footer-images pl-0">
+                <div class="logo-img clickable-item">
+                    <a href="/">
+                        <img src="../../../assets/images/logo.svg" draggable="false" alt="elmenus" style="margin-bottom: 20px; width: 125px;height: 29.5px;">
+                    </a>
+                </div>
+                <a class="get-app" rel="noopener" target="_blank" href="https://app.adjust.com/vquym1x">
+                    <img src="../../../assets/images/get-gplay.png" alt="Get Android app on Google Play" style="width: 125px;height: 43.5px;">
+                </a>
+                <a class="get-app" rel="noopener" target="_blank" href="https://app.adjust.com/vquym1x">
+                    <img src="../../../assets/images/get-appstore.png" alt="Get iPhone app on App Store" style="width: 125px;height: 43.5px;">
+                </a>
+            </div>
+            <!-- cities col -->
+            <div class="cities-col col-sm-12 col-md-3 col-lg-3">
+                <h4> Cities
+
+                </h4>
+                <ul class="footer-cities-list">
+
+                    <li>
+                        <a href="/ain-sokhna/delivery">
+
+                            Ain Sokhna
+                        </a>
+
+                    </li>
+
+                    <li>
+                        <a  href="/al-fayoum/delivery">
+
+                            Al Fayoum
+                        </a>
+
+                    </li>
+
+                    <li>
+                        <a  href="/alexandria/delivery">
+
+                            Alexandria
+                        </a>
+
+                    </li>
+
+                    <li>
+                        <a  href="/asyut/delivery">
+
+                            Asyut
+                        </a>
+
+                    </li>
+
+                    <li>
+                        <a  href="/benha/delivery">
+
+                            Benha
+                        </a>
+
+                    </li>
+
+                    <li>
+                        <a  href="/beni-suef/delivery">
+
+                            Beni Suef
+                        </a>
+
+                    </li>
+
+                    <li>
+                        <a  href="/cairo/delivery">
+
+                            Cairo
+                        </a>
+
+                    </li>
+
+                    <li>
+                        <a  href="/dahab/delivery">
+
+                            Dahab
+                        </a>
+
+                    </li>
+
+                    <li>
+                        <a  href="/damanhour/delivery">
+
+                            Damanhour
+                        </a>
+
+                    </li>
+
+                    <li>
+                        <a  href="/damietta/delivery">
+
+                            Damietta
+                        </a>
+
+                    </li>
+
+                    <li>
+                        <a  href="/el-gouna/delivery">
+
+                            El Gouna
+                        </a>
+
+                    </li>
+
+                    <li>
+                        <a  href="/el-mansoura/delivery">
+
+                            El Mansoura
+                        </a>
+
+                    </li>
+
+                    <li>
+                        <a  href="/hurghada/delivery">
+
+                            Hurghada
+                        </a>
+
+                    </li>
+
+                    <li>
+                        <a  href="/ismailia/delivery">
+
+                            Ismailia
+                        </a>
+
+                    </li>
+
+                    <li>
+                        <a  href="/kafr-el-sheikh/delivery">
+
+                            Kafr El Sheikh
+                        </a>
+
+                    </li>
+
+                </ul>
+            </div>
+
+            <!-- Areas col -->
+            <div class="areas-col col-sm-12 col-md-4 col-lg-4">
+                <h4>Areas </h4>
+                <ul class="footer-cities-list">
+
+                    <li>
+                        <a  href="/cairo/delivery/6th-of-october">
+                            6th of October
+                        </a>
+                    </li>
+
+                    <li>
+                        <a  href="/cairo/delivery/abbassiya">
+                            Abbassiya
+                        </a>
+                    </li>
+
+                    <li>
+                        <a  href="/cairo/delivery/agouza">
+                            Agouza
+                        </a>
+                    </li>
+
+                    <li>
+                        <a  href="/cairo/delivery/al-katameya">
+                            Al Katameya
+                        </a>
+                    </li>
+
+                    <li>
+                        <a  href="/cairo/delivery/al-mokatam">
+                            Al Mokatam
+                        </a>
+                    </li>
+
+                    <li>
+                        <a  href="/cairo/delivery/al-rehab-city">
+                            Al Rehab City
+                        </a>
+                    </li>
+
+                    <li>
+                        <a  href="/cairo/delivery/alexandria-desert-road">
+                            Alexandria Desert Road
+                        </a>
+                    </li>
+
+                    <li>
+                        <a  href="/cairo/delivery/dokki">
+                            Dokki
+                        </a>
+                    </li>
+
+                    <li>
+                        <a  href="/cairo/delivery/downtown">
+                            Downtown
+                        </a>
+                    </li>
+
+                    <li>
+                        <a  href="/cairo/delivery/el-shorouk-city">
+                            El Shorouk City
+                        </a>
+                    </li>
+
+                    <li>
+                        <a  href="/cairo/delivery/faisal">
+                            Faisal
+                        </a>
+                    </li>
+
+                    <li>
+                        <a  href="/cairo/delivery/garden-city">
+                            Garden City
+                        </a>
+                    </li>
+
+                    <li>
+                        <a  href="/cairo/delivery/giza">
+                            Giza
+                        </a>
+                    </li>
+
+                    <li>
+                        <a  href="/cairo/delivery/hadayek-el-ahram">
+                            Hadayek El Ahram
+                        </a>
+                    </li>
+
+                    <li>
+                        <a  href="/cairo/delivery/hadayek-el-kobba">
+                            Hadayek El Kobba
+                        </a>
+                    </li>
+
+                </ul>
+            </div>
+
+            <!-- Dishes col -->
+            <div class="dishes-col col-sm-12 col-md-3 col-lg-3">
+                <h4>Dishes</h4>
+
+                <ul class="footer-cities-list">
+
+                    <li>
+                        <a href="/cairo/delivery/maadi/dishes-grilled-chicken">
+                            Grilled Chicken
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="/cairo/delivery/maadi/dishes-shawerma">
+                            Shawerma
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="/cairo/delivery/maadi/dishes-burgers">
+                            Burgers
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="/cairo/delivery/maadi/dishes-pizza">
+                            Pizza
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="/cairo/delivery/maadi/dishes-fried-chicken">
+                            Fried Chicken
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="/cairo/delivery/maadi/dishes-pasta">
+                            Pasta
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="/cairo/delivery/maadi/dishes-grills">
+                            Grills
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="/cairo/delivery/maadi/dishes-asian">
+                            Asian
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="/cairo/delivery/maadi/dishes-healthy-food">
+                            Healthy Food
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="/cairo/delivery/maadi/dishes-desserts">
+                            Desserts
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="/cairo/delivery/maadi/dishes-breakfast">
+                            Breakfast
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="/cairo/delivery/maadi/dishes-seafood">
+                            Seafood
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="/cairo/delivery/maadi/dishes-sushi">
+                            Sushi
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="/cairo/delivery/maadi/dishes-feteer">
+                            Feteer
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="/cairo/delivery/maadi/dishes-koshary">
+                            Koshary
+                        </a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </div>	
+    
+        <!-- second footer row -->
+    <div class="row mt-lg-4">
+<!--				<i class="fab fa-facebook-square"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-linkedin"></i>
+-->
+    <div class="ft-social col-md-2 text-center">
+        <a href="#" class="ft-sc-icon" >
+            <i class="ft-sc-icon fab fa-facebook-square"></i>
+        </a>
+        <a href="#" class="ft-sc-icon">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="#" class="ft-sc-icon">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#" class="ft-sc-icon">
+            <i class="fab fa-linkedin"></i>
+        </a>				
+        
+    </div>
+    <div class="col-md-7 d-flex justify-content-between ">	
+        <a href="about.html" class="ft-lnk ">
+            About us
+        </a>
+        <a href="terms.html" class="ft-lnk">
+            Terms and Conditions
+        </a>
+        <a href="#" class="ft-lnk">
+            Privacy
+        </a>
+        <a href="#" class="ft-lnk">
+            Careers
+        </a>
+    </div>
+    <div class="col-md-3 text-center">
+        <p>© 2020 elmenus</p>
+    </div>
+    </div>	
+</footer>		
