--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -371,10 +371,10 @@
         
     </div>
     <div class="col-md-7 d-flex justify-content-between ">	
-        <a href="about.html" class="ft-lnk ">
+        <a class="ft-lnk " [routerLink]="['/about']">
             About us
         </a>
-        <a href="terms.html" class="ft-lnk">
+        <a class="ft-lnk" [routerLink]="['/terms']">
             Terms and Conditions
         </a>
         <a href="#" class="ft-lnk">
