--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -176,8 +176,7 @@
                             <!--    DropDown-->
                             <!--   Button-->
                             <div class="col-md-2 col-sm-4 my-1">
-                                <button id="go-btn"
-                                 type="submit" class="btn btn-danger">Go<i class="pl-2 fas fa-arrow-right"></i></button>
+                                <button id="go-btn" routerLink="/search" type="submit" class="btn btn-danger">Go<i class="pl-2 fas fa-arrow-right"></i></button>
                             </div>
                         </div>
                     </form>
