--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -18,8 +18,20 @@
         <a class="nav-link" [routerLink]="['/dineout']" routerLinkActive="active" >Dine Out</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/setting']" routerLinkActive="active"><i class="fas fa-gift" ></i>Gift Meals</a>
+        <a class="nav-link" [routerLink]="['/giftmeals']" routerLinkActive="active"><i class="fas fa-gift" ></i>Gift Meals</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/myorders']">My Orders</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-user-friends"></i>  Dropdown link
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item"  [routerLink]="['/setting']" >Account Settings</a>
+        </div>
+      </li>
+      
     </ul>
     <!--<form class="form-inline my-2 my-lg-0">-->
       <button class="btn login my-2 my-sm-0" data-toggle="modal" data-target="#exampleModalCenter" >Login</button>
@@ -58,7 +70,7 @@
         <a class="nav-link" href="#"><i class="fas fa-bell"></i>Notification</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">My Orders</a>
+        <a class="nav-link" [routerLink]="['/myorders']" href="#">My Orders</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
