--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
 <!-- <router-outlet></router-outlet> -->
-<!-- <app-header></app-header> -->
+
+<app-header></app-header>
 <div>
     <router-outlet></router-outlet>
 </div>
+<app-footer></app-footer>
+
 <!-- <app-delivery></app-delivery> -->
 
 <!--<app-dashboard></app-dashboard>-->
