--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- <router-outlet></router-outlet> -->
 
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 <div>
     <router-outlet></router-outlet>
 </div>
