--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -166,7 +166,7 @@
                                     name="location"
                                     required >                                
                                 <option *ngFor="let branch of branches; let i = index"
-                                        [value]='branch.id'>
+                                        [value]='branch.branchName'>
                                     {{branch.branchName}}
                                 </option>
                                 </select>
@@ -176,7 +176,10 @@
                             <!--    DropDown-->
                             <!--   Button-->
                             <div class="col-md-2 col-sm-4 my-1">
-                                <button id="go-btn" routerLink="/search" type="submit" class="btn btn-danger">Go<i class="pl-2 fas fa-arrow-right"></i></button>
+                                <!-- routerLink="/search" -->
+                                <button id="go-btn" (click)="viewRestaurant()" type="submit" class="btn btn-danger">
+                                    Go <i class="pl-2 fas fa-arrow-right"></i>
+                                </button>
                             </div>
                         </div>
                     </form>
