--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <!-- <router-outlet></router-outlet> -->
-<app-header></app-header>
+<!--<app-header></app-header>
 <div>
     <router-outlet></router-outlet>
-</div>
+</div>-->
 <!-- <app-delivery></app-delivery> -->
 
-<!--<app-dashboard></app-dashboard>-->
+<app-dashboard></app-dashboard>
 <!--<app-change-email></app-change-email>-->
 <!--<app-change-password></app-change-password>-->
 <!--<app-address-book></app-address-book>-->
