--- a/src/app/Components/resturant/resturant.component.html
+++ b/src/app/Components/resturant/resturant.component.html
@@ -120,14 +120,14 @@
 
                         </span> 4.6 (17611)</h5>
                     <h3 class="rest-loc"><i class="fas fa-map-marker-alt"></i>39 El Hosary Square <a
-                            href="#">District 1,6th of October</a></h3>
+                        routerLink="/resturant/list">District 1,6th of October</a></h3>
                 </div>
             </div>
         </div>
         <div class="col-md-4 px-4">
             <div class="cover-btns float-right my-5">
                 <button class="btn"><i class="fas fa-users"></i></button>
-                <button class="btn"><i class="fas fa-phone"></i></button>
+                <button class="btn" data-toggle="tooltip" data-placement="top" title="19991"><i class="fas fa-phone"></i></button>
             </div>
             <div class="clearfix"></div>
         </div>
