--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -210,7 +210,7 @@
                                 <!--			row-cols-1 row-cols-md-2-->
                                 <div class="row  pt-md-4 pb-md-4">
                                     <div id="clickable-delivery" class="col-lg-6 vl clickable">
-                                        <a routerLink="/delivery" routerLinkActive="active">
+                                        <a routerLink="/delivery" >
                                             <!-- Card -->
                                             <div class="card crd-no-brdr">
 
