--- a/src/app/Components/delivery/delivery.component.html
+++ b/src/app/Components/delivery/delivery.component.html
@@ -36,7 +36,7 @@
       <h4>Restaurants <sub>({{number_of_restaurants}})</sub></h4><br>
       <div class="row">
         <div class="col-sm-4" style="margin-bottom: 30px;" *ngFor="let item of restaurantList">
-          <img [src]="item.restaurantFeaturedPhotos"  width="100%" height="250px">
+          <img [src]="item.restaurantFeaturedPhotos"  width="100%" height="250px" (click)="goResturant(item.id)">
           
           <img [src]="item.restaurantFeaturedPhotos" width="40px" height="40px" style="float: left;margin-right: 6px;margin-top: 12px;">
           <p class="paragraph">{{item.restaurantName}}</p> 
