--- a/src/app/Components/search/search.component.html
+++ b/src/app/Components/search/search.component.html
@@ -10,7 +10,7 @@
         <div class="row" id="content">
             <!-- resturant card -->
             <div class="col-lg-4 col-sm-12 col-md-6 col-xs-12" *ngFor="let resturant of resturantsList">
-                <app-searchdetails [resturant]="resturant"></app-searchdetails>
+                <app-searchdetails (click)="goResturant(resturant.id)" [resturant]="resturant"></app-searchdetails>
             </div>
         </div>
         <button class="btn load-more-btn"> Load more restaurants </button>
